Staging/Platform_V2/master/templates/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: staging-master-service
  namespace: staging
spec:
  selector:
    app: staging-master-app
  ports:
    - protocol: "TCP"
      port: 9088 
      targetPort: 8080 
  type: ClusterIP
