Staging/Platform_V2/master/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-master-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: cat.terrestrialplatform.link
      http:
        paths:
          - path: /staging/master/(.*)
            pathType: Prefix

            backend:

              service:

                name: staging-master-service

                port:

                  number: 9088
